@@ -9,3 +9,4 @@ dtracetools-x.x
 * removed dtrace-pathopens.d
 * updated dtrace-php_flow.d to work
 * added dtrace-slowhttpdconnect-stacks.d dtrace-topcallsbyprocess.d
+* removed dtrace-uname-a.d
